# rustyjam1

./: Cargo.toml  README.md  concept.md
.cargo/: config.toml
assets/: camera_perlin.frag  castbar.frag  castbar.vert  classic_perlin.frag  classic_perlin_animated.frag  level1.tmx  level2.tmx  treasure.frag  treasure.vert
src/: button.rs  camera_enemy.rs  castbar.rs  game_over.rs  inventory.rs  items.rs  light_radius.rs  main.rs  main_menu_ui.rs  map.rs  movement.rs  perlin.rs  player.rs  reward.rs  skills.rs  smoke_bomb.rs  stats_screen.rs  treasure.rs  ui.rs
