cargo-features = ["strip"]

[package]
name = "rustyjam1"
version = "0.1.0"
edition = "2018"
authors = ["White Oak"]

[dependencies]
bevy = { version = "0.5.0", default-features = false, features = [
    "dynamic",
    "bevy_winit",
    "bevy_wgpu",
    "render",
    "png",
    "x11",
] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", features = ["tiled_map"] }
itertools = "0.10.1"
rand = "0.8.4"
tiled = { version = "0.9.5", default-features = false }

[profile.release]
# panic = "abort"
# strip = true
# lto = true
# codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
